Adicionando parágrafos, Lorem e Linha diviisória

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
         <h5>Desenvolvedor Nível 3</h5>
         <h6>Desenvolvedor Nível 4</h6>
 
+        <!-- Paragrafos -->
+        <p>Conteúdo da primeira semana dev</p>
+        <p>Conteúdo da segunda semana dev</p>
+        <p>Conteúdo da terceira semana dev</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laboriosam sapiente eum magni eius voluptatibus vero vitae aut? Dolore explicabo cumque repudiandae tempore qui delectus unde a ducimus ex doloribus.</p>
+        
+        <!-- Linha divisória -->
+        <hr>
 
+        <!-- Tratamento de imagens -->
 
     <!-- FINAL DO CORPO DA PÁGINA -->
     </body>
