--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <hr>
 
         <!-- Tratamento de imagens -->
+        <img src="./image.jpg" alt="imagem carro" title="corvette" width="400">
+
 
     <!-- FINAL DO CORPO DA PÁGINA -->
     </body>
