Adicionando listas ordenadas e não ordenadas

--- a/index.html
+++ b/index.html
@@ -37,6 +37,31 @@
         <!-- Tratamento de imagens -->
         <img src="./image.jpg" alt="imagem carro" title="corvette" width="400">
 
+        <!-- Listas ordenadas -->
+        <ol>
+            <li>Conteúdo aula1</li>
+            <li>Conteúdo aula2</li>
+            <li>Conteúdo aula3</li>
+        </ol>
+
+        <ol type="I">
+            <li>Conteúdo aula1</li>
+            <li>Conteúdo aula2</li>
+            <li>Conteúdo aula3</li>
+        </ol>
+
+        <!-- Listas não ordenadas -->
+        <ul>
+            <li>Conteúdo de vídeo aula1</li>
+            <li>Conteúdo de vídeo aula2</li>
+            <li>Conteúdo de vídeo aula3</li>
+        </ul>
+        <!-- <ul type="square"> -->
+        <ul type="circle">
+            <li>Conteúdo de vídeo aula1</li>
+            <li>Conteúdo de vídeo aula2</li>
+            <li>Conteúdo de vídeo aula3</li>
+        </ul>
 
     <!-- FINAL DO CORPO DA PÁGINA -->
     </body>
