Adicionando formulários e criando outra página

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             <li>Conteúdo de vídeo aula3</li>
         </ul>
 
+        <!-- Formulários -->
+        <h2>Dados Alunos</h2>
+        <form action="dados.html">
+            <input type="text" placeholder="Digite o seu nome" required/>
+            <input type="password" placeholder="Digite a sua senha" required/>
+            <button type="submit">Enviar</button>
+        </form>
+
     <!-- FINAL DO CORPO DA PÁGINA -->
     </body>
 
