--- a/index.html
+++ b/index.html
@@ -71,6 +71,23 @@
             <button type="submit">Enviar</button>
         </form>
 
+        <!-- Tabelas -->
+        <table border="1">
+            <thread>
+                <tr>
+                    <td>Nome</td>
+                    <td>Preço</td>
+                    <td>Foto</td>
+                </tr>
+            </thread>
+            <tbody>
+                <tr>
+                    <td>Notebook</td>
+                    <td>R$ 3000,00</td>
+                    <td><img src="./image.jpg" alt="imagem" width="100"></td>
+                </tr>
+            </tbody>
+        </table>
     <!-- FINAL DO CORPO DA PÁGINA -->
     </body>
 
